// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test chatInfo AddressOnly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "height": 50,
            "marginBottom": 10,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column-reverse",
                "marginLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "height": 25,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  100
                   
                  DOT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  $
                  1000
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                }
              }
            >
              Wallet Polkadot
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 25,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "height": 50,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "alignContent": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginLeft": 20,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                  "width": "100%",
                }
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 40,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          editable={false}
          keyboardType="decimal-pad"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "flex-start",
                "color": "#BFBDBD",
                "marginBottom": 8,
                "marginTop": 8,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="enter_amount_title"
        />
        <Text
          style={
            Object {
              "color": "#888888",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DADADA",
            },
            Object {
              "width": "95%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": "50%",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 60,
        "width": "85%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 55,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        send_btn
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test chatInfo WithUser 1 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "height": 50,
            "marginBottom": 10,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column-reverse",
                "marginLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "height": 25,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  100
                   
                  DOT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  $
                  1000
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                }
              }
            >
              Wallet Polkadot
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 25,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "height": 50,
          "marginTop": 10,
          "paddingLeft": "5%",
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          height={50}
          source={
            Object {
              "uri": undefined,
            }
          }
          style={
            Object {
              "borderRadius": 25,
              "height": 50,
              "width": 50,
            }
          }
          width={50}
        />
        <View
          style={
            Object {
              "alignContent": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginLeft": 20,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 18,
                "width": "100%",
              }
            }
          >
            name
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 40,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          editable={false}
          keyboardType="decimal-pad"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "flex-start",
                "color": "#BFBDBD",
                "marginBottom": 8,
                "marginTop": 8,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="enter_amount_title"
        />
        <Text
          style={
            Object {
              "color": "#888888",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DADADA",
            },
            Object {
              "width": "95%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": "50%",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 60,
        "width": "85%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 55,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        send_btn
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test chatInfo WithUser 2 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "height": 50,
            "marginBottom": 10,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column-reverse",
                "marginLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "height": 25,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  100
                   
                  DOT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  $
                  1000
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                }
              }
            >
              Wallet Polkadot
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 25,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "height": 50,
          "marginTop": 10,
          "paddingLeft": "5%",
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          height={50}
          source={
            Object {
              "uri": undefined,
            }
          }
          style={
            Object {
              "borderRadius": 25,
              "height": 50,
              "width": 50,
            }
          }
          width={50}
        />
        <View
          style={
            Object {
              "alignContent": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginLeft": 20,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 18,
                "width": "100%",
              }
            }
          >
            name
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 40,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          editable={false}
          keyboardType="decimal-pad"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "flex-start",
                "color": "#BFBDBD",
                "marginBottom": 8,
                "marginTop": 8,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="enter_amount_title"
        />
        <Text
          style={
            Object {
              "color": "#888888",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DADADA",
            },
            Object {
              "width": "95%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": "50%",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 60,
        "width": "85%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 55,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        send_btn
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test send 1 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "height": 50,
            "marginBottom": 10,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column-reverse",
                "marginLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "height": 25,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  100
                   
                  DOT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  $
                  1000
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                }
              }
            >
              Wallet Polkadot
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 25,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "height": 50,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "alignContent": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginLeft": 20,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                  "width": "100%",
                }
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 40,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          editable={false}
          keyboardType="decimal-pad"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "flex-start",
                "color": "#BFBDBD",
                "marginBottom": 8,
                "marginTop": 8,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="enter_amount_title"
        />
        <Text
          style={
            Object {
              "color": "#888888",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DADADA",
            },
            Object {
              "width": "95%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": "50%",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 60,
        "width": "85%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 55,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        send_btn
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test send 2 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "height": 50,
            "marginBottom": 10,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column-reverse",
                "marginLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "height": 25,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  100
                   
                  DOT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  $
                  1000
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                }
              }
            >
              Wallet Polkadot
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 25,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "height": 50,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "alignContent": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginLeft": 20,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                  "width": "100%",
                }
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 40,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          editable={false}
          keyboardType="decimal-pad"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "flex-start",
                "color": "#BFBDBD",
                "marginBottom": 8,
                "marginTop": 8,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="enter_amount_title"
        />
        <Text
          style={
            Object {
              "color": "#888888",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DADADA",
            },
            Object {
              "width": "95%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": "50%",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 60,
        "width": "85%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 55,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        send_btn
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test view 1 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "height": 50,
            "marginBottom": 10,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column-reverse",
                "marginLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "height": 25,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  100
                   
                  DOT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  $
                  1000
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                }
              }
            >
              Wallet Polkadot
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 25,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "height": 50,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "alignContent": "center",
                "flex": 1,
                "justifyContent": "center",
                "marginLeft": 20,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                  "width": "100%",
                }
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 40,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          editable={false}
          keyboardType="decimal-pad"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "flex-start",
                "color": "#BFBDBD",
                "marginBottom": 8,
                "marginTop": 8,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="enter_amount_title"
        />
        <Text
          style={
            Object {
              "color": "#888888",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DADADA",
            },
            Object {
              "width": "95%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": "50%",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 60,
        "width": "85%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 55,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        send_btn
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test view 2 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "height": 50,
            "marginBottom": 10,
            "marginTop": 10,
            "paddingLeft": "5%",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/img/dot.png",
              }
            }
            style={
              Object {
                "borderColor": "black",
                "borderRadius": 25,
                "borderWidth": 0.8,
                "height": 50,
                "overflow": "hidden",
                "width": 50,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "flexDirection": "column-reverse",
                "marginLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "height": 25,
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  100
                   
                  DOT
                </Text>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "black",
                        "fontFamily": "Roboto-Bold",
                        "fontSize": 15,
                        "fontStyle": "normal",
                        "lineHeight": 18,
                      },
                      Object {
                        "textAlign": "right",
                      },
                    ]
                  }
                >
                  $
                  1000
                </Text>
              </View>
            </View>
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "lineHeight": 18,
                }
              }
            >
              Wallet Polkadot
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 25,
        },
        undefined,
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "height": 50,
          "marginTop": 10,
          "paddingLeft": "5%",
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/img/dot.png",
            }
          }
          style={
            Object {
              "borderColor": "black",
              "borderRadius": 25,
              "borderWidth": 0.8,
              "height": 50,
              "overflow": "hidden",
              "width": 50,
            }
          }
        />
        <View
          style={
            Object {
              "alignContent": "center",
              "flex": 1,
              "justifyContent": "center",
              "marginLeft": 20,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            placeholder="enter_address_title"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "borderBottomWidth": 1,
                  "color": "black",
                  "fontFamily": "Roboto-Regular",
                  "fontSize": 15,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "paddingBottom": 8,
                  "paddingLeft": 0,
                  "paddingRight": 0,
                  "paddingTop": 8,
                  "width": "100%",
                },
                Object {
                  "borderColor": "#DADADA",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 40,
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "width": "95%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          editable={false}
          keyboardType="decimal-pad"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 17,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "alignSelf": "flex-start",
                "color": "#BFBDBD",
                "marginBottom": 8,
                "marginTop": 8,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "width": "95%",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="enter_amount_title"
        />
        <Text
          style={
            Object {
              "color": "#888888",
              "fontFamily": "Roboto-Regular",
              "fontSize": 17,
              "fontStyle": "normal",
              "fontWeight": "normal",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#DADADA",
            },
            Object {
              "width": "95%",
            },
          ]
        }
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "width": "95%",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "width": "50%",
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "width": "50%",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 60,
        "width": "85%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2AB2E2",
          "borderRadius": 10,
          "height": 55,
          "justifyContent": "center",
          "opacity": 1,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Roboto-Regular",
            "fontSize": 15,
            "fontStyle": "normal",
            "fontWeight": "normal",
          }
        }
      >
        send_btn
      </Text>
    </View>
  </View>
</View>
`;
